Fix double scroll bar

--- a/src/custom.css
+++ b/src/custom.css
@@ -1,3 +1,7 @@
+body{
+	margin: unset;
+}
+
 #toolbar {
     height: 50px;
 }
